--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,30 +1,67 @@
 .App {
-  text-align: center;
-  width:100%;
+    /*text-align: center;*/
+    width: 100vw;
+    height: 100vh;
+    background-color: #0141a8;
 }
-.Header{
-    color:#0141a8;
+
+.Header {
+    color: #0141a8;
     text-shadow: 1px 1px #000000;
 }
-@media (min-width: 768px) {
-    .globeContainer{
-        margin-left: 20vw;
-        width: 60vw;
-        margin-top: 5vh;
-        height:60vw;
+
+@media (min-width: 1000px) {
+    #globeContainer {
+        padding: 1em 1em 1em 1em;
+        width: 70vw;
+        height: 98vh;
     }
-}
-@media (max-width: 768px) {
-    .globeContainer{
-        margin-left: 10vw;
-        width: 80vw;
-        margin-top: 2vh;
-        height:80vw;
+    #dataList {
+        display: inline-block;
+        vertical-align: top;
+        overflow-y: scroll;
+        height: 100vh;
+        float:right;
+        margin-right: 2vw;
     }
 }
 
+@media (max-width: 1000px) {
+    #globeContainer {
+        width: 100vw;
+        height: 60vh;
+    }
+    #dataList {
+        text-align: center;
+        display: inline-block;
+        vertical-align: top;
+        overflow-y: scroll;
+        width: 100vw;
+        height: 30vh;
+    }
+    .detailText {
+        display: inline-block;
+    }
+}
+
+#globeContainer {
+    display: inline-block;
+}
+
+.dataCard{
+    margin-bottom: 2px;
+}
+.dataCardBody{
+    padding: 0.25em !important;
+}
+
 #renderCanvas {
-  width: 100%;
-  height: 100%;
-  touch-action: none;
+    width: 100%;
+    height: 100%;
+    touch-action: none;
+    display: inline;
+}
+
+#renderCanvas:focus {
+    outline: none !important;
 }
